# SchnoseAPI

./: .dockerignore  .editorconfig  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  flake.nix  justfile  recipe.json
api/: config.example.toml
api/src/: lib.rs  main.rs
api/src/models/: app_state.rs  mod.rs  spec.rs
api/src/setup/: args.rs  mod.rs
configs/: .gitignore  api-docker.toml  api.toml  data-wrangler.example.toml
crates/data-wrangler/: Cargo.toml  README.md
crates/data-wrangler/src/: args.rs  lib.rs  main.rs  parse_elastic_records.rs  parse_globalapi_players.rs  parse_globalapi_records.rs  parse_globalapi_servers.rs
crates/elastic-scraper/: Cargo.toml  config.example.toml
crates/elastic-scraper/src/: config.rs  elastic.rs  lib.rs  main.rs  save.rs  serde.rs
crates/global-api-scraper/: Cargo.toml  README.md  sqlx-data.json
crates/global-api-scraper-shuttle/: .gitignore  Cargo.toml
crates/global-api-scraper-shuttle/src/: main.rs
crates/global-api-scraper/src/: args.rs  config.rs  fetch_players.rs  fetch_records.rs  filters.rs  lib.rs  main.rs  mappers.rs  maps.rs  players.rs  records.rs  servers.rs
crates/just-trace/: Cargo.toml  README.md
crates/just-trace/src/: lib.rs
crates/player-migrations/: Cargo.toml  README.md
crates/player-migrations/src/: args.rs  config.rs  lib.rs  main.rs
crates/zer0k-elastic-scraper/: Cargo.toml  README.md
crates/zer0k-elastic-scraper/src/: args.rs  config.rs  elastic.rs  lib.rs  main.rs  utils.rs
crates/zer0k-elastic-wrangler/: Cargo.toml
hooks/: create.sh  pre-push
migrations/: 20230625040619_initial_database_design.down.sql  20230625040619_initial_database_design.up.sql
schnose-api/: .gitignore  Cargo.toml  config.example.toml  sqlx-data.json
schnose-api/src/: config.rs  error.rs  lib.rs  main.rs  response.rs  serde.rs  state.rs
schnose-api/src/database/: courses.rs  filters.rs  mappers.rs  maps.rs  mod.rs  modes.rs  players.rs  records.rs  servers.rs
schnose-api/src/models/: app_state.rs  error.rs  maps.rs  mod.rs  modes.rs  players.rs  records.rs  servers.rs  spec.rs
schnose-api/src/routes/: mod.rs
schnose-api/src/routes/filters/: map.rs  mod.rs
schnose-api/src/routes/health/: mod.rs
schnose-api/src/routes/maps/: ident.rs  mod.rs  root.rs
schnose-api/src/routes/modes/: ident.rs  mod.rs  root.rs
schnose-api/src/routes/players/: ident.rs  mod.rs  root.rs
schnose-api/src/routes/records/: id.rs  mod.rs  root.rs
schnose-api/src/routes/servers/: ident.rs  mod.rs  root.rs
schnose-api/src/setup/: args.rs  config.rs  mod.rs  tracing.rs
schnosedb/: .gitignore  Cargo.toml  connect.example.sh
schnosedb/migrations/: 230430_maps.sql
schnosedb/sql/: down.sql  up.sql
schnosedb/src/: lib.rs  main.rs  serde.rs
schnosedb/src/cli/: args.rs  insert.rs  mod.rs  select.rs
schnosedb/src/models/: courses.rs  filters.rs  mappers.rs  maps.rs  mod.rs  modes.rs  players.rs  records.rs  servers.rs
scripts/: fetch_filters.js  fetch_maps.js
