[workspace]
members = ["crates/elastic-scraper"]

# Error handling
[workspace.dependencies.color-eyre]
version = "0.6"

[workspace.dependencies.thiserror]
version = "1"

# Logging
[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["json"]

# CLI
[workspace.dependencies.clap]
version = "4"
features = ["derive"]

# Utilities
[workspace.dependencies.chrono]
version = "0.4"

# JSON parsing
[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1"

[workspace.dependencies.toml]
version = "0.5"

# GOKZ
[workspace.dependencies.gokz_rs]
version = "0.18"
features = ["global_api", "schnose_api"]

# async runtime
[workspace.dependencies.tokio]
version = "1"
features = ["full"]

# SQL
[workspace.dependencies.sqlx]
version = "0.6"
features = [
	"runtime-tokio-rustls",
	"mysql",
	"all-types",
]

