[package]
name = "schnose-api"
version = "0.1.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "REST API for CS:GO KZ"
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/SchnoseAPI"
license-file = "../../LICENSE"
publish = false

[dependencies]
color-eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
gokz_rs = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
schnosedb = { path = "../schnosedb" }

[dependencies.axum]
version = "0.6"
features = ["macros"]

[dependencies.time]
version = "0.3"
features = ["macros"]
