[package]
name = "schnose-api"
version = "0.1.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "REST API for CS:GO KZ"
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/SchnoseAPI"
license-file = "../../LICENSE"
publish = false

[dependencies]
color-eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gokz_rs = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
schnosedb = { path = "../schnosedb" }

[dependencies.axum]
version = "0.6"
features = ["macros"]

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.4"
features = ["normalize-path"]

[dependencies.time]
version = "0.3"
features = ["macros"]

[dependencies.shuttle-runtime]
version = "0.15"

[dependencies.shuttle-service]
version = "0.15"

[dependencies.shuttle-secrets]
version = "0.15"
