[package]
name = "schnose-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
just-trace = { path = "../crates/just-trace" }
color-eyre = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
gokz_rs = { workspace = true }

axum = { version = "0.6.18", features = ["macros"] }
utoipa = { version = "3.3.0", features = [] } # axum_extras, uuid
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
