[package]
name = "schnosedb"
version = "0.1.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "CLI helper to scrape data from an Elastic instance"
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/SchnoseAPI"
license-file = "../../LICENSE"
publish = false

[dependencies]
color-eyre = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
gokz_rs = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

elastic-scraper = { path = "../crates/elastic-scraper" }
