[package]
name = "data-wrangler"
version = "0.1.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "CLI helper to parse Elastic/GlobalAPI data for SchnoseDB"
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/SchnoseAPI"
license-file = "../../LICENSE"
publish = false

[dependencies]
color-eyre = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
gokz_rs = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

elastic-scraper = { path = "../elastic-scraper" }
schnosedb = { path = "../../schnosedb" }
