[package]
name = "elastic-scraper"
version = "0.1.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "CLI helper to scrape data from an Elastic instance"
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/SchnoseAPI"
license-file = "../../LICENSE"
publish = false

[dependencies]
color-eyre = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gokz_rs = { workspace = true }
tokio = { workspace = true }

[dependencies.elasticsearch]
version = "8.5.0-alpha.1"
