[package]
name = "global-api-scraper-shuttle"
version = "0.1.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "Will continuously fetch records from the GlobalAPI and insert them into SchnoseDB."
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/SchnoseAPI"
license-file = "../../LICENSE"
publish = false

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gokz_rs = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

shuttle-runtime = "0.15"
shuttle-service = "0.15"
shuttle-secrets = "0.15"

schnosedb = { path = "../../schnosedb" }
global-api-scraper = { path = "../global-api-scraper" }
