[package]
name = "player-migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
just-trace = { path = "../just-trace" }
color-eyre = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["mysql", "postgres"] }
serde = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
clap = { workspace = true }
gokz_rs = { workspace = true }

schnose-api = { path = "../../schnose-api" }
